plugins/showfps,-compositing: apply vertical offset to geometry

These debugging effects render off-screen if a multi-monitor setup is used, where the monitors' top sides are not aligned. This MR offsets the effects' scene geometry by the viewport's vertical offset.

BUG: 511232