src/plugins/showfps/showfpseffect.cpp
@@ -93,7 +93,7 @@ void ShowFpsEffect::paintScreen(const RenderTarget &renderTarget, const RenderVi
     }
 
     const auto rect = viewport.renderRect();
-    m_scene->setGeometry(QRect(rect.x() + rect.width() - 300, 0, 300, 150));
+    m_scene->setGeometry(QRect(rect.x() + rect.width() - 300, rect.y(), 300, 150));
     effects->renderOffscreenQuickView(renderTarget, viewport, m_scene.get());
 }
 
